allowed the percentage to be less than 100%

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </form>
 
         <script>
-            var loveScore = Math.random();
+            var loveScore = Math.random()*100;
             document.getElementById("submit").addEventListener("click", pareva);
             function pareva()
             {
