--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
 <html>
-    <head>
-        <title>love calculator</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    </head>
-    <body>
+
+<head>
+    <title>love calculator</title>
+    <style>
+        body {
+            background-image: url(love-background-love-background-hearts-valentine-s-day-109487734.jpg);
+        }
+
+        #container {
+            position: relative;
+            margin-left: 550px;
+            margin-top: 200px;
+        }
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body>
+    <div id="container">
+        <h1 style="margin-left: -10px;">Love calculator</h1>
         <form>
             <label for="firstP">enter the name of first person</label>
             <br>
-            <input type="text" name="firstP" id="firstP" placeholder="sushant">
+            <input type="text" name="firstP" id="firstP" placeholder="Sushant" required>
             <br>
             <label for="secondP">enter the name of second person</label>
             <br>
-            <input type="text" name="secondP" id="secondP" placeholder="manisha">
+            <input type="text" name="secondP" id="secondP" placeholder="Manisha" required>
+            <br> 
             <input type="submit" name="submit" id="submit">
+            <br>
+            <p id="result"></p>
         </form>
+    </div>
 
-        <script>
-            var loveScore = Math.random()*100;
-            document.getElementById("submit").addEventListener("click", pareva);
-            function pareva()
-            {
-                console.log(loveScore);
-                alert("your love score is " + loveScore +"%");
-            }
-        </script>
-    </body>
+
+    <script>
+        var loveScore = Math.floor(Math.random()*100);
+        document.getElementById("submit").addEventListener("click", pareva);
+
+        function pareva() {
+            document.getElementById("result").innerHTML = "your love score is " + loveScore + "%";
+
+        }
+    </script>
+</body>
+
 </html>
