changed innerHtml to alert

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         document.getElementById("submit").addEventListener("click", pareva);
 
         function pareva() {
-            document.getElementById("result").innerHTML = "your love score is " + loveScore + "%";
+            
+            var x = "your love score is " + loveScore + "%";
+            alert(x);
 
         }
     </script>
